First version of GaleShapley implemented